fix column wobble on mobile

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,81 +7,90 @@
     padding: 0;
   }
 
-  .card {
-    background-color: $grey;
-    color: $black;
+  .row {
+    --bs-gutter-x: 0;
+    --bs-gutter-y: 0;
+    @media (min-width: 576px) {
+      --bs-gutter-x: 1.5rem;
+      --bs-gutter-y: 0;
+    }
 
-    a {
+    .card {
+      background-color: $grey;
       color: $black;
-      font-weight: bold;
-      text-decoration: none;
-      padding: 0;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
 
-      &:hover {
-        color: $white;
-      }
-    }
-
-    &.has-crisis {
-      background-color: $danger-light;
-
-      .chart a:hover {
-        .wellbeing-chart-wrapper {
-          background-color: $white !important;
-          color: $black;
-        }
-      }
-    }
-
-    .card-header {
-      i {
-        &.unpinned {
-          transform: rotate(45deg);
-        }
+      a {
+        color: $black;
+        font-weight: bold;
+        text-decoration: none;
+        padding: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
 
         &:hover {
-          color: $brand-secondary-dark;
-          cursor: pointer;
+          color: $white;
         }
       }
-    }
 
-    .card-body {
-      text-align: left;
+      &.has-crisis {
+        background-color: $danger-light;
 
-      .container {
-        padding: 0;
+        .chart a:hover {
+          .wellbeing-chart-wrapper {
+            background-color: $white !important;
+            color: $black;
+          }
+        }
+      }
 
-        .row {
-          padding-left: 0.5rem;
-          margin-bottom: 0.5rem;
-
-          &:last-child {
-            margin-bottom: 0;
+      .card-header {
+        i {
+          &.unpinned {
+            transform: rotate(45deg);
           }
 
-          .chart {
-            text-align: center;
+          &:hover {
+            color: $brand-secondary-dark;
+            cursor: pointer;
+          }
+        }
+      }
 
-            .wellbeing-chart-wrapper {
-              padding: 0.75rem;
-              border-radius: 1rem;
+      .card-body {
+        text-align: left;
+
+        .container {
+          padding: 0;
+
+          .row {
+            padding-left: 0.5rem;
+            margin-bottom: 0.5rem;
+
+            &:last-child {
+              margin-bottom: 0;
             }
 
-            a:hover {
-              color: $brand-primary;
+            .chart {
+              text-align: center;
 
               .wellbeing-chart-wrapper {
-                background-color: $brand-secondary-dark;
+                padding: 0.75rem;
+                border-radius: 1rem;
+              }
+
+              a:hover {
+                color: $brand-primary;
+
+                .wellbeing-chart-wrapper {
+                  background-color: $brand-secondary-dark;
+                }
               }
             }
-          }
 
-          span {
-            padding: 0;
+            span {
+              padding: 0;
+            }
           }
         }
       }
